--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "ng": "ng",
     "start": "set NODE_ENV=production&& node app.js",
-    "postinstall": "./node_modules/.bin/ng build --prod --aot --no-progress",
+    "heroku-prebuild": "npm i -g @angular/cli",
+    "heroku-postbuild": "ng build --prod --aot --no-progress",
     "server:run": "nodemon",
     "hmr": "concurrently \"npm run server:run \" \"ng serve --hmr -e=hmr --progress=false --proxy-config proxy.conf.json\" ",
     "dev": "concurrently \"npm run server:run \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
@@ -32,20 +33,19 @@
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json"
   },
   "dependencies": {
-    "@angular/animations": "^4.4.1",
-    "@angular/cli": "1.3.2",
-    "@angular/common": "^4.4.1",
-    "@angular/compiler": "^4.4.1",
-    "@angular/compiler-cli": "^4.4.1",
-    "@angular/core": "^4.4.1",
-    "@angular/forms": "^4.4.1",
-    "@angular/http": "^4.4.1",
-    "@angular/platform-browser": "^4.4.1",
-    "@angular/platform-browser-dynamic": "^4.4.1",
-    "@angular/router": "^4.4.1",
+    "@angular/animations": "^4.4.3",
+    "@angular/common": "^4.4.3",
+    "@angular/compiler": "^4.4.3",
+    "@angular/compiler-cli": "^4.4.3",
+    "@angular/core": "^4.4.3",
+    "@angular/forms": "^4.4.3",
+    "@angular/http": "^4.4.3",
+    "@angular/platform-browser": "^4.4.3",
+    "@angular/platform-browser-dynamic": "^4.4.3",
+    "@angular/router": "^4.4.3",
     "@angularclass/hmr": "^2.1.3",
-    "@ngx-translate/core": "7.2.0",
-    "@ngx-translate/http-loader": "1.0.2",
+    "@ngx-translate/core": "8.0.0",
+    "@ngx-translate/http-loader": "2.0.0",
     "@types/bcrypt": "^1.0.0",
     "@types/body-parser": "^1.16.5",
     "@types/errorhandler": "0.0.31",
@@ -53,15 +53,14 @@
     "@types/jasmine": "^2.6.0",
     "@types/jasminewd2": "^2.0.3",
     "@types/mocha": "2.2.43",
-    "@types/morgan": "^1.7.32",
-    "@types/node": "~8.0.28",
-    "@types/should": "^11.2.0",
+    "@types/morgan": "^1.7.33",
+    "@types/node": "~8.0.31",
     "@types/supertest": "^2.0.3",
     "angular-tree-component": "^5.0.0",
     "angular2-jwt": "^0.2.3",
     "angular2-notifications": "^0.7.7",
     "bcrypt": "^1.0.3",
-    "body-parser": "^1.18.1",
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta",
     "compression": "^1.7.0",
     "config": "^1.26.2",
@@ -69,11 +68,11 @@
     "core-js": "^2.5.1",
     "database-updates": "^2.0.0",
     "errorhandler": "^1.5.0",
-    "express": "^4.15.4",
-    "express-validator": "^4.1.1",
+    "express": "^4.15.5",
+    "express-validator": "^4.2.1",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.0.1",
-    "mongoose": "^4.11.11",
+    "mongoose": "^4.11.13",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
     "ngx-bootstrap": "^1.9.3",
@@ -87,7 +86,7 @@
     "zone.js": "^0.8.17"
   },
   "devDependencies": {
-    "@angular/language-service": "^4.4.1",
+    "@angular/language-service": "^4.4.3",
     "@biesbjerg/ngx-translate-extract": "^2.3.2",
     "@types/chai": "^4.0.4",
     "@types/chai-http": "3.0.3",
@@ -105,7 +104,7 @@
     "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-typescript": "^3.0.5",
+    "karma-typescript": "^3.0.7",
     "mocha": "^3.5.3",
     "mockgoose": "^7.3.3",
     "protractor": "~5.1.2",
