--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "@angular/compiler-cli": "^4.4.3",
     "@angular/core": "^4.4.3",
     "@angular/forms": "^4.4.3",
-    "@angular/http": "^4.4.3",
     "@angular/platform-browser": "^4.4.3",
     "@angular/platform-browser-dynamic": "^4.4.3",
     "@angular/router": "^4.4.3",
     "@angularclass/hmr": "^2.1.3",
+    "@auth0/angular-jwt": "^1.0.0-beta.9",
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "2.0.0",
     "@types/bcrypt": "^1.0.0",
@@ -57,7 +57,6 @@
     "@types/node": "~8.0.31",
     "@types/supertest": "^2.0.3",
     "angular-tree-component": "^5.0.0",
-    "angular2-jwt": "^0.2.3",
     "angular2-notifications": "^0.7.7",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
@@ -87,6 +86,7 @@
   },
   "devDependencies": {
     "@angular/language-service": "^4.4.3",
+    "@angular/cli": "^1.4.3",
     "@biesbjerg/ngx-translate-extract": "^2.3.2",
     "@types/chai": "^4.0.4",
     "@types/chai-http": "3.0.3",
