--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,6 +11,9 @@
         "typeRoots": [
             "../node_modules/@types"
         ],
+        "types": [
+            "node"
+        ],
         "lib": [
             "es2015",
             "dom"
