--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "set NODE_ENV=production&& node app.js",
-    "heroku-prebuild": "npm i -g @angular/cli",
+    "start": "set NODE_ENV=production && ts-node server/index.ts",
+    "heroku-prebuild": "npm i -g @angular/cli ts-node",
     "heroku-postbuild": "ng build --prod --aot --no-progress",
     "server:run": "nodemon",
     "hmr": "concurrently \"npm run server:run \" \"ng serve --hmr -e=hmr --progress=false --proxy-config proxy.conf.json\" ",
