--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "ng lint --type-check",
     "test": "ng test --single-run --no-progress && npm run test:backend",
     "test:frontend": "./node_modules/.bin/istanbul cover ng test --single-run --no-progress",
-    "test:backend": "./node_modules/.bin/_mocha ./test/server/**/*.spec.ts --compilers ts:ts-node/register --recursive --check-leaks -t 50000",
+    "test:backend": "./node_modules/.bin/_mocha ./test/server/**/*.spec.ts --compilers ts:ts-node/register --recursive --check-leaks -t 50000 --exit",
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e --no-progress --proxy-config proxy.conf.json",
@@ -33,67 +33,67 @@
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json"
   },
   "dependencies": {
-    "@angular/animations": "^4.4.4",
-    "@angular/common": "^4.4.4",
-    "@angular/compiler": "^4.4.4",
-    "@angular/compiler-cli": "^4.4.4",
-    "@angular/core": "^4.4.4",
-    "@angular/forms": "^4.4.4",
-    "@angular/platform-browser": "^4.4.4",
-    "@angular/platform-browser-dynamic": "^4.4.4",
-    "@angular/router": "^4.4.4",
+    "@angular/animations": "^4.4.6",
+    "@angular/common": "^4.4.6",
+    "@angular/compiler": "^4.4.6",
+    "@angular/compiler-cli": "^4.4.6",
+    "@angular/core": "^4.4.6",
+    "@angular/forms": "^4.4.6",
+    "@angular/platform-browser": "^4.4.6",
+    "@angular/platform-browser-dynamic": "^4.4.6",
+    "@angular/router": "^4.4.6",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^1.0.0-beta.9",
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "2.0.0",
     "@types/bcrypt": "^1.0.0",
-    "@types/body-parser": "^1.16.5",
-    "@types/errorhandler": "0.0.31",
-    "@types/express": "^4.0.37",
-    "@types/jasmine": "^2.6.0",
+    "@types/body-parser": "^1.16.7",
+    "@types/errorhandler": "0.0.32",
+    "@types/express": "^4.0.39",
+    "@types/jasmine": "^2.6.2",
     "@types/jasminewd2": "^2.0.3",
-    "@types/mocha": "2.2.43",
-    "@types/morgan": "^1.7.33",
-    "@types/node": "~8.0.33",
+    "@types/mocha": "2.2.44",
+    "@types/morgan": "^1.7.35",
+    "@types/node": "~8.0.47",
     "@types/supertest": "^2.0.3",
-    "angular-tree-component": "^5.0.0",
+    "angular-tree-component": "^5.1.2",
     "angular2-notifications": "^0.7.8",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta",
     "compression": "^1.7.1",
-    "config": "^1.26.2",
+    "config": "^1.27.0",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.1",
     "database-updates": "^2.0.0",
     "errorhandler": "^1.5.0",
-    "express": "^4.16.1",
+    "express": "^4.16.2",
     "express-validator": "^4.2.1",
     "font-awesome": "^4.7.0",
-    "jsonwebtoken": "^8.0.1",
-    "mongoose": "^4.11.13",
+    "jsonwebtoken": "^8.1.0",
+    "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "ngx-bootstrap": "^1.9.3",
     "ngx-clickout": "^1.0.2",
     "nodemon": "^1.12.1",
     "normalize-css": "^2.3.1",
-    "rxjs": "^5.4.3",
+    "rxjs": "^5.5.2",
     "ts-node": "~3.3.0",
     "typescript": "~2.5.3",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "^1.4.5",
-    "@angular/language-service": "^4.4.4",
+    "@angular/cli": "^1.4.9",
+    "@angular/language-service": "^4.4.6",
     "@biesbjerg/ngx-translate-extract": "^2.3.2",
     "@types/chai": "^4.0.4",
     "@types/chai-http": "3.0.3",
     "@types/faker": "^4.1.1",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
-    "codelyzer": "~3.2.1",
+    "codelyzer": "~3.2.2",
     "concurrently": "^3.5.0",
     "faker": "^4.1.0",
     "jasmine-core": "~2.8.0",
@@ -104,11 +104,11 @@
     "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-typescript": "^3.0.7",
+    "karma-typescript": "^3.0.8",
     "mocha": "^4.0.1",
     "mockgoose": "^7.3.3",
-    "protractor": "~5.1.2",
+    "protractor": "~5.2.0",
     "supertest": "^3.0.0",
-    "tslint": "~5.7.0"
+    "tslint": "~5.8.0"
   }
 }
