--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "ng lint --type-check",
     "test": "ng test --single-run --no-progress && npm run test:backend",
     "test:frontend": "./node_modules/.bin/istanbul cover ng test --single-run --no-progress",
-    "test:backend": "./node_modules/.bin/_mocha ./test/server/**/*.spec.ts --compilers ts:ts-node/register --recursive --check-leaks -t 50000 --exit",
+    "test:backend": "./node_modules/.bin/_mocha ./test/server/**/*.spec.ts --require ts:ts-node/register --recursive --check-leaks -t 50000 --exit",
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e --no-progress --proxy-config proxy.conf.json",
