--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "@angular/router": "^6.1.6",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^2.0.0",
-    "@clr/angular": "^0.13.0-beta.2",
-    "@clr/icons": "^0.13.0-beta.2",
-    "@clr/ui": "^0.13.0-beta.2",
-    "@nestjs/common": "^5.3.2",
-    "@nestjs/core": "^5.3.2",
+    "@clr/angular": "^0.13.0-rc.1",
+    "@clr/icons": "^0.13.0-rc.1",
+    "@clr/ui": "^0.13.0-rc.1",
+    "@nestjs/common": "^5.3.5",
+    "@nestjs/core": "^5.3.4",
     "@nestjs/mongoose": "^5.2.1",
     "@nestjs/swagger": "^2.5.1",
     "@nestjs/testing": "^5.3.1",
@@ -73,17 +73,17 @@
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.2.12",
+    "mongoose": "^5.2.13",
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
     "normalize.css": "^8.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.3.1",
+    "rxjs": "^6.3.2",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
-    "ws": "^3.1.0",
+    "ws": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -91,7 +91,7 @@
     "@angular/cli": "^6.1.5",
     "@angular/language-service": "^6.1.6",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
-    "@nestjs/cli": "^5.3.0",
+    "@nestjs/cli": "^5.4.0",
     "@types/bcrypt": "^2.0.0",
     "@types/chai": "^4.1.4",
     "@types/chai-http": "3.0.5",
