--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test:backend-e2e": "./node_modules/.bin/_mocha ./test/server/**/projects-.spec.ts --require ts-node/register --recursive --check-leaks -t 50000 --exit",
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
-    "e2e": "ng e2e --configuration ci",
+    "e2e": "concurrently \"nodemon \" \"ng e2e --configuration ci\" ",
     "start": "set NODE_ENV=production&&node ./dist/server/main.js",
     "hmr": "concurrently \"nodemon \" \"ng serve --configuration hmr --progress=false\" ",
     "dev": "concurrently \"nodemon \" \"ng serve --progress=false\"  ",
@@ -38,23 +38,23 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "^6.1.6",
-    "@angular/common": "^6.1.6",
-    "@angular/compiler": "^6.1.6",
-    "@angular/compiler-cli": "^6.1.6",
-    "@angular/core": "^6.1.6",
-    "@angular/forms": "^6.1.6",
-    "@angular/platform-browser": "^6.1.6",
-    "@angular/platform-browser-dynamic": "^6.1.6",
-    "@angular/router": "^6.1.6",
+    "@angular/animations": "^6.1.7",
+    "@angular/common": "^6.1.7",
+    "@angular/compiler": "^6.1.7",
+    "@angular/compiler-cli": "^6.1.7",
+    "@angular/core": "^6.1.7",
+    "@angular/forms": "^6.1.7",
+    "@angular/platform-browser": "^6.1.7",
+    "@angular/platform-browser-dynamic": "^6.1.7",
+    "@angular/router": "^6.1.7",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^2.0.0",
-    "@clr/angular": "^0.13.0-rc.1",
-    "@clr/icons": "^0.13.0-rc.1",
-    "@clr/ui": "^0.13.0-rc.1",
-    "@nestjs/common": "^5.3.5",
-    "@nestjs/core": "^5.3.4",
-    "@nestjs/mongoose": "^5.2.1",
+    "@clr/angular": "^0.13.0",
+    "@clr/icons": "^0.13.0",
+    "@clr/ui": "^0.13.0",
+    "@nestjs/common": "^5.3.6",
+    "@nestjs/core": "^5.3.6",
+    "@nestjs/mongoose": "^5.2.2",
     "@nestjs/swagger": "^2.5.1",
     "@nestjs/testing": "^5.3.1",
     "@nestjs/websockets": "^5.3.1",
@@ -73,8 +73,8 @@
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.2.13",
-    "morgan": "^1.9.0",
+    "mongoose": "^5.2.14",
+    "morgan": "^1.9.1",
     "multer": "^1.3.1",
     "normalize.css": "^8.0.0",
     "passport": "^0.4.0",
@@ -87,9 +87,9 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.5",
-    "@angular/cli": "^6.1.5",
-    "@angular/language-service": "^6.1.6",
+    "@angular-devkit/build-angular": "~0.8.1",
+    "@angular/cli": "^6.2.1",
+    "@angular/language-service": "^6.1.7",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@nestjs/cli": "^5.4.0",
     "@types/bcrypt": "^2.0.0",
@@ -102,8 +102,8 @@
     "@types/jasminewd2": "^2.0.3",
     "@types/mocha": "5.2.5",
     "@types/node": "~10.9.4",
-    "@types/supertest": "^2.0.5",
-    "@types/ws": "^6.0.0",
+    "@types/supertest": "^2.0.6",
+    "@types/ws": "^6.0.1",
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
     "codelyzer": "~4.4.4",
@@ -115,16 +115,16 @@
     "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^2.0.3",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^1.3.1",
     "mocha": "^5.2.0",
     "mockgoose": "^7.3.5",
     "nodemon": "^1.18.4",
-    "protractor": "~5.4.0",
+    "protractor": "~5.4.1",
     "rimraf": "^2.6.2",
-    "sinon": "^6.1.5",
-    "supertest": "^3.1.0",
+    "sinon": "^6.2.0",
+    "supertest": "^3.3.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
