--- a/package.json
+++ b/package.json
@@ -49,15 +49,15 @@
     "@angular/router": "^6.1.7",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^2.0.0",
-    "@clr/angular": "^0.13.0",
-    "@clr/icons": "^0.13.0",
-    "@clr/ui": "^0.13.0",
-    "@nestjs/common": "^5.3.6",
-    "@nestjs/core": "^5.3.6",
+    "@clr/angular": "^0.13.1-patch.1",
+    "@clr/icons": "^0.13.1-patch.1",
+    "@clr/ui": "^0.13.1-patch.1",
+    "@nestjs/common": "^5.3.7",
+    "@nestjs/core": "^5.3.7",
     "@nestjs/mongoose": "^5.2.2",
     "@nestjs/swagger": "^2.5.1",
-    "@nestjs/testing": "^5.3.1",
-    "@nestjs/websockets": "^5.3.1",
+    "@nestjs/testing": "^5.3.7",
+    "@nestjs/websockets": "^5.3.7",
     "@ngx-translate/core": "10.0.2",
     "@ngx-translate/http-loader": "3.0.1",
     "@webcomponents/custom-elements": "^1.2.0",
@@ -87,8 +87,8 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.1",
-    "@angular/cli": "^6.2.1",
+    "@angular-devkit/build-angular": "~0.8.2",
+    "@angular/cli": "^6.2.2",
     "@angular/language-service": "^6.1.7",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@nestjs/cli": "^5.4.0",
@@ -97,7 +97,7 @@
     "@types/chai-http": "3.0.5",
     "@types/config": "0.0.34",
     "@types/express": "^4.16.0",
-    "@types/faker": "^4.1.3",
+    "@types/faker": "^4.1.4",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
     "@types/mocha": "5.2.5",
@@ -109,7 +109,7 @@
     "codelyzer": "~4.4.4",
     "concurrently": "^4.0.1",
     "faker": "^4.1.0",
-    "husky": "^1.0.0-rc.13",
+    "husky": "^1.0.0-rc.14",
     "jasmine-core": "~3.2.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -123,7 +123,7 @@
     "nodemon": "^1.18.4",
     "protractor": "~5.4.1",
     "rimraf": "^2.6.2",
-    "sinon": "^6.2.0",
+    "sinon": "^6.3.3",
     "supertest": "^3.3.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
