--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
       "pre-commit": "npm run lint && npm test"
     }
   },
+  "engines": {
+    "node": ">=10.0.0",
+    "npm": ">=6.0.0"
+  },
   "dependencies": {
     "@angular/animations": "^6.1.7",
     "@angular/common": "^6.1.7",
