--- a/package.json
+++ b/package.json
@@ -42,20 +42,20 @@
     "npm": ">=6.0.0"
   },
   "dependencies": {
-    "@angular/animations": "^6.1.7",
-    "@angular/common": "^6.1.7",
-    "@angular/compiler": "^6.1.7",
-    "@angular/compiler-cli": "^6.1.7",
-    "@angular/core": "^6.1.7",
-    "@angular/forms": "^6.1.7",
-    "@angular/platform-browser": "^6.1.7",
-    "@angular/platform-browser-dynamic": "^6.1.7",
-    "@angular/router": "^6.1.7",
+    "@angular/animations": "^6.1.8",
+    "@angular/common": "^6.1.8",
+    "@angular/compiler": "^6.1.8",
+    "@angular/compiler-cli": "^6.1.8",
+    "@angular/core": "^6.1.8",
+    "@angular/forms": "^6.1.8",
+    "@angular/platform-browser": "^6.1.8",
+    "@angular/platform-browser-dynamic": "^6.1.8",
+    "@angular/router": "^6.1.8",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^2.0.0",
-    "@clr/angular": "^0.13.1-patch.1",
-    "@clr/icons": "^0.13.1-patch.1",
-    "@clr/ui": "^0.13.1-patch.1",
+    "@clr/angular": "^0.13.2",
+    "@clr/icons": "^0.13.2",
+    "@clr/ui": "^0.13.2",
     "@nestjs/common": "^5.3.7",
     "@nestjs/core": "^5.3.7",
     "@nestjs/mongoose": "^5.2.2",
@@ -66,7 +66,7 @@
     "@ngx-translate/http-loader": "3.0.1",
     "@webcomponents/custom-elements": "^1.2.0",
     "angular2-notifications": "^1.0.4",
-    "bcrypt": "^3.0.0",
+    "bcrypt": "^3.0.1",
     "class-transformer": "^0.1.9",
     "class-validator": "^0.9.1",
     "compression": "^1.7.3",
@@ -77,7 +77,7 @@
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.2.14",
+    "mongoose": "^5.2.16",
     "morgan": "^1.9.1",
     "multer": "^1.3.1",
     "normalize.css": "^8.0.0",
@@ -91,13 +91,13 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.2",
-    "@angular/cli": "^6.2.2",
-    "@angular/language-service": "^6.1.7",
+    "@angular-devkit/build-angular": "~0.8.3",
+    "@angular/cli": "^6.2.3",
+    "@angular/language-service": "^6.1.8",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
-    "@nestjs/cli": "^5.4.0",
+    "@nestjs/cli": "^5.5.0",
     "@types/bcrypt": "^2.0.0",
-    "@types/chai": "^4.1.4",
+    "@types/chai": "^4.1.5",
     "@types/chai-http": "3.0.5",
     "@types/config": "0.0.34",
     "@types/express": "^4.16.0",
@@ -105,7 +105,7 @@
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
     "@types/mocha": "5.2.5",
-    "@types/node": "~10.9.4",
+    "@types/node": "~10.10.1",
     "@types/supertest": "^2.0.6",
     "@types/ws": "^6.0.1",
     "chai": "^4.1.2",
@@ -127,7 +127,7 @@
     "nodemon": "^1.18.4",
     "protractor": "~5.4.1",
     "rimraf": "^2.6.2",
-    "sinon": "^6.3.3",
+    "sinon": "^6.3.4",
     "supertest": "^3.3.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
