--- a/package.json
+++ b/package.json
@@ -42,97 +42,97 @@
     "npm": ">=6.0.0"
   },
   "dependencies": {
-    "@angular/animations": "^6.1.8",
-    "@angular/common": "^6.1.8",
-    "@angular/compiler": "^6.1.8",
-    "@angular/compiler-cli": "^6.1.8",
-    "@angular/core": "^6.1.8",
-    "@angular/forms": "^6.1.8",
-    "@angular/platform-browser": "^6.1.8",
-    "@angular/platform-browser-dynamic": "^6.1.8",
-    "@angular/pwa": "^0.8.3",
-    "@angular/router": "^6.1.8",
-    "@angular/service-worker": "^6.1.8",
+    "@angular/animations": "^7.2.2",
+    "@angular/common": "^7.2.2",
+    "@angular/compiler": "^7.2.2",
+    "@angular/compiler-cli": "^7.2.2",
+    "@angular/core": "^7.2.2",
+    "@angular/forms": "^7.2.2",
+    "@angular/platform-browser": "^7.2.2",
+    "@angular/platform-browser-dynamic": "^7.2.2",
+    "@angular/pwa": "^0.12.3",
+    "@angular/router": "^7.2.2",
+    "@angular/service-worker": "^7.2.2",
     "@angularclass/hmr": "^2.1.3",
-    "@auth0/angular-jwt": "^2.0.0",
-    "@clr/angular": "^0.13.2",
-    "@clr/icons": "^0.13.2",
-    "@clr/ui": "^0.13.2",
-    "@nestjs/common": "^5.3.7",
-    "@nestjs/core": "^5.3.7",
+    "@auth0/angular-jwt": "^2.1.0",
+    "@clr/angular": "^1.0.4",
+    "@clr/icons": "^1.0.4",
+    "@clr/ui": "^1.0.4",
+    "@nestjs/common": "^5.6.2",
+    "@nestjs/core": "^5.6.2",
     "@nestjs/mongoose": "^5.2.2",
     "@nestjs/swagger": "^2.5.1",
-    "@nestjs/testing": "^5.3.7",
-    "@nestjs/websockets": "^5.3.7",
-    "@ngx-translate/core": "10.0.2",
-    "@ngx-translate/http-loader": "3.0.1",
-    "@webcomponents/custom-elements": "^1.2.0",
-    "angular2-notifications": "^1.0.4",
+    "@nestjs/testing": "^5.6.2",
+    "@nestjs/websockets": "^5.6.2",
+    "@ngx-translate/core": "11.0.1",
+    "@ngx-translate/http-loader": "4.0.0",
+    "@webcomponents/custom-elements": "^1.2.1",
+    "angular2-notifications": "^2.0.0",
     "bcrypt": "^3.0.1",
-    "class-transformer": "^0.1.9",
+    "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "compression": "^1.7.3",
-    "config": "^2.0.1",
+    "config": "^3.0.1",
     "cookie-parser": "^1.4.3",
-    "core-js": "^2.5.7",
+    "core-js": "^2.6.3",
     "database-updates": "^2.0.0",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "font-awesome": "^4.7.0",
-    "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.2.16",
+    "jsonwebtoken": "^8.4.0",
+    "mongoose": "^5.4.6",
     "morgan": "^1.9.1",
-    "multer": "^1.3.1",
-    "normalize.css": "^8.0.0",
+    "multer": "^1.4.1",
+    "normalize.css": "^8.0.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.3.2",
-    "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1",
-    "ws": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.3.3",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
+    "ws": "^6.1.3",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.3",
-    "@angular/cli": "^6.2.3",
-    "@angular/language-service": "^6.1.8",
+    "@angular-devkit/build-angular": "~0.12.3",
+    "@angular/cli": "^7.2.3",
+    "@angular/language-service": "^7.2.2",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
-    "@nestjs/cli": "^5.5.0",
+    "@nestjs/cli": "^5.8.0",
     "@types/bcrypt": "^2.0.0",
-    "@types/chai": "^4.1.5",
+    "@types/chai": "^4.1.7",
     "@types/chai-http": "3.0.5",
     "@types/config": "0.0.34",
-    "@types/express": "^4.16.0",
-    "@types/faker": "^4.1.4",
-    "@types/jasmine": "^2.8.8",
-    "@types/jasminewd2": "^2.0.3",
+    "@types/express": "^4.16.1",
+    "@types/faker": "^4.1.5",
+    "@types/jasmine": "^3.3.7",
+    "@types/jasminewd2": "^2.0.6",
     "@types/mocha": "5.2.5",
-    "@types/node": "~10.10.1",
-    "@types/supertest": "^2.0.6",
+    "@types/node": "~10.12.8",
+    "@types/supertest": "^2.0.7",
     "@types/ws": "^6.0.1",
-    "chai": "^4.1.2",
-    "chai-http": "^4.2.0",
-    "codelyzer": "~4.4.4",
-    "concurrently": "^4.0.1",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
+    "codelyzer": "~4.5.0",
+    "concurrently": "^4.1.0",
     "faker": "^4.1.0",
-    "husky": "^1.0.0-rc.14",
-    "jasmine-core": "~3.2.1",
+    "husky": "^1.3.1",
+    "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~1.0.1",
+    "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^1.3.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "mocha": "^5.2.0",
-    "mockgoose": "^7.3.5",
-    "nodemon": "^1.18.4",
-    "protractor": "~5.4.1",
-    "rimraf": "^2.6.2",
-    "sinon": "^6.3.4",
-    "supertest": "^3.3.0",
-    "ts-node": "~7.0.1",
-    "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "mockgoose": "^8.0.1",
+    "nodemon": "^1.18.9",
+    "protractor": "~5.4.2",
+    "rimraf": "^2.6.3",
+    "sinon": "^7.2.3",
+    "supertest": "^3.4.2",
+    "ts-node": "~8.0.1",
+    "tslint": "~5.12.1",
+    "typescript": "~3.2.4"
   }
 }
