--- a/package.json
+++ b/package.json
@@ -42,44 +42,46 @@
     "npm": ">=6.0.0"
   },
   "dependencies": {
-    "@angular/animations": "^7.2.7",
-    "@angular/common": "^7.2.7",
-    "@angular/compiler": "^7.2.7",
-    "@angular/compiler-cli": "^7.2.7",
-    "@angular/core": "^7.2.7",
-    "@angular/forms": "^7.2.7",
-    "@angular/platform-browser": "^7.2.7",
-    "@angular/platform-browser-dynamic": "^7.2.7",
-    "@angular/pwa": "^0.12.3",
-    "@angular/router": "^7.2.7",
-    "@angular/service-worker": "^7.2.7",
+    "@angular/animations": "^7.2.13",
+    "@angular/common": "^7.2.13",
+    "@angular/compiler": "^7.2.13",
+    "@angular/compiler-cli": "^7.2.13",
+    "@angular/core": "^7.2.13",
+    "@angular/forms": "^7.2.13",
+    "@angular/platform-browser": "^7.2.13",
+    "@angular/platform-browser-dynamic": "^7.2.13",
+    "@angular/pwa": "^0.13.8",
+    "@angular/router": "^7.2.13",
+    "@angular/service-worker": "^7.2.13",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^2.1.0",
-    "@clr/angular": "^1.1.0",
-    "@clr/icons": "^1.1.0",
-    "@clr/ui": "^1.1.0",
-    "@nestjs/common": "^5.7.3",
-    "@nestjs/core": "^5.7.3",
-    "@nestjs/mongoose": "^5.2.2",
-    "@nestjs/swagger": "^2.5.1",
-    "@nestjs/testing": "^5.7.3",
-    "@nestjs/websockets": "^5.7.3",
+    "@clr/angular": "^1.1.2",
+    "@clr/icons": "^1.1.2",
+    "@clr/ui": "^1.1.2",
+    "@nestjs/common": "^6.1.1",
+    "@nestjs/core": "^6.1.1",
+    "@nestjs/mongoose": "^6.1.2",
+    "@nestjs/platform-express": "^6.1.1",
+    "@nestjs/platform-socket.io": "^6.1.1",
+    "@nestjs/swagger": "^3.0.2",
+    "@nestjs/testing": "^6.1.1",
+    "@nestjs/websockets": "^6.1.1",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
-    "@webcomponents/custom-elements": "^1.2.1",
+    "@webcomponents/custom-elements": "^1.2.4",
     "angular2-notifications": "^2.0.0",
-    "bcrypt": "^3.0.4",
+    "bcrypt": "^3.0.6",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
-    "compression": "^1.7.3",
-    "config": "^3.0.1",
+    "compression": "^1.7.4",
+    "config": "^3.1.0",
     "cookie-parser": "^1.4.4",
-    "core-js": "^2.6.5",
+    "core-js": "^3.0.1",
     "database-updates": "^2.0.0",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
-    "jsonwebtoken": "^8.5.0",
-    "mongoose": "^5.4.17",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.5.2",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "normalize.css": "^8.0.1",
@@ -89,49 +91,50 @@
     "rxjs": "^6.4.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "ws": "^6.1.4",
-    "zone.js": "^0.8.29"
+    "swagger-ui-express": "^4.0.2",
+    "ws": "^6.2.1",
+    "zone.js": "^0.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.4",
-    "@angular/cli": "^7.2.4",
-    "@angular/language-service": "^7.2.7",
+    "@angular-devkit/build-angular": "~0.13.8",
+    "@angular/cli": "^7.3.8",
+    "@angular/language-service": "^7.2.13",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
-    "@nestjs/cli": "^5.8.0",
+    "@nestjs/cli": "^6.3.0",
     "@types/bcrypt": "^3.0.0",
     "@types/chai": "^4.1.7",
-    "@types/chai-http": "3.0.5",
+    "@types/chai-http": "4.2.0",
     "@types/config": "0.0.34",
     "@types/express": "^4.16.1",
     "@types/faker": "^4.1.5",
-    "@types/jasmine": "^3.3.9",
+    "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "^2.0.6",
     "@types/mocha": "5.2.6",
-    "@types/node": "~11.10.4",
+    "@types/node": "~11.13.6",
     "@types/supertest": "^2.0.7",
     "@types/ws": "^6.0.1",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "~5.0.0",
     "concurrently": "^4.1.0",
     "faker": "^4.1.0",
     "husky": "^1.3.1",
-    "jasmine-core": "~3.3.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.1",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "mocha": "^6.0.2",
-    "nodemon": "^1.18.10",
+    "mocha": "^6.1.4",
+    "nodemon": "^1.18.11",
     "protractor": "~5.4.2",
     "rimraf": "^2.6.3",
-    "sinon": "^7.2.7",
-    "supertest": "^3.4.2",
-    "ts-node": "~8.0.2",
-    "tslint": "~5.13.1",
+    "sinon": "^7.3.2",
+    "supertest": "^4.0.2",
+    "ts-node": "~8.1.0",
+    "tslint": "~5.16.0",
     "typescript": "~3.2.4"
   }
 }
