--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ version: "{build}"
 environment:
   matrix:
     - nodejs_version: "10"
-    - nodejs_version: "12"
+#    - nodejs_version: "12"
 
 build: off
 
