--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "ng build --prod && tsc -p ./server",
     "test": "ng test --watch=false --no-progress && npm run test:backend",
     "test:frontend": "./node_modules/.bin/istanbul cover ng test --watch=false --no-progress",
-    "test:backend": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' ./node_modules/.bin/_mocha ./server/**/*.spec.ts --require ts-node/register --recursive --check-leaks -t 50000 --exit",
+    "test:backend": "cross-env TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' ./node_modules/.bin/_mocha ./server/**/*.spec.ts --require ts-node/register --recursive --check-leaks -t 50000 --exit",
     "test:backend-e2e": "./node_modules/.bin/_mocha ./test/server/**/projects-.spec.ts --require ts-node/register --recursive --check-leaks -t 50000 --exit",
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
@@ -115,6 +115,7 @@
     "chai-http": "^4.3.0",
     "codelyzer": "~5.0.1",
     "concurrently": "^4.1.0",
+    "cross-env": "^5.2.0",
     "faker": "^4.1.0",
     "husky": "^2.2.0",
     "jasmine-core": "~3.4.0",
