--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,18 @@
 /dist
 /tmp
 /out-tsc
-.nyc_output/
+# Only exists if Bazel was run
+/bazel-out
 
 # db
 /db
 
 # dependencies
 /node_modules
+
+# profiling files
+chrome-profiler-events*.json
+speed-measure-plugin*.json
 
 # IDEs and editors
 /.idea
@@ -27,6 +32,7 @@
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+.history/*
 
 # misc
 /.sass-cache
@@ -37,7 +43,9 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+.nyc_output/
 
 # System Files
 .DS_Store
 Thumbs.db
+
